
	* src/roff/troff/node.cpp (remove_font_specific_character):
	Recover from invalid input more robustly.  If we encounter an
	invalid character token in the `rfschar` argument list (one that
	has a null pointer to its `charinfo`), and the build used
	`NDEBUG` to suppress assertions, skip the character and process
	the next token (if any) instead of ignoring the rest of the
	input line, as the `cflags` and `rchar` requests do.

2025-11-19  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (define_character, get_line_arg)
	(do_translate):
	* src/roff/troff/node.cpp (remove_font_specific_character): Add
	assertions.
	* src/roff/troff/input.cpp (do_overstrike, do_bracket)
	(token::description)
	(encode_special_character_for_device_output)
	(set_character_flags_request): Invert sense of test and add
	assertion.
	(token::next): Add assertions to `\z` escape sequence handler.
	(token:description): Split conditional to accommodate assertion.
	(encode_special_character_for_device_output): Lift assignment
	out of conditional branch since a null pointer check now guards
	it from execution with an early `return`.  Add assertion for
	impossible situation of a special character already being
	defined with a null groff `symbol` as its identifier.  For
	`NDEBUG` builds, return early should that eventuate, as we can't
	usefully call `map_special_character_for_device_output()` with a
	null pointer argument.

2025-11-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (read_title_parts): Slightly
	refactor.  Lift return value of repeated `tok.get_charinfo()`
	function call into a local variable, `ci`.

2025-11-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (token::description): Report the node
	type of node tokens when describing them.

2025-11-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Give node types' self-reported type information